--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,14 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.9",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2"
