--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "config": "^3.3.9",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2"
   }
